[tool.poetry]
name = "d2signuphelper"
version = "0.1.0"
description = ""
authors = ["Mitchell Frazer <108438939+moosieth@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
